# webgpu-rs

./: Cargo.toml  readme.md
app/: Cargo.toml
app/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/components/: mod.rs  state.rs
engine/src/traits/: init.rs
examples/: camera.rs
examples/cube/: cube.colors  cube.vertices  main.rs  shader.wgsl
examples/ecs/: main.rs
examples/ecs/ecs/: ecs.rs  engine.rs  keyboard.rs  mod.rs  state.rs  system.rs  window.rs
examples/model/: main.rs  model.gltf  model.rs  shader.wgsl
examples/model/model/: gltf.rs  mod.rs  model.rs  wavefront.rs
examples/triangle/: main.rs  shader.wgsl
src/: config.rs  lib.rs  transforms.rs
src/ecs/: components.rs  mod.rs  registry.rs  systems.rs  world.rs
src/inputs/: keyboard.rs  mod.rs
src/systems/: mod.rs
src/systems/inputs/: keyboard.rs  mod.rs
src/window/: config.rs  frame_time.rs  mod.rs  window.rs  windowmodes.rs
