[package]
name = "webgpu"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
env_logger = "0.8"
winit = "0.25"
cgmath = "0.18"
wgpu = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
lazy_static = "1.4.0"
anymap = "0.12"